improving media queries for smaller screen

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
             <div id="about-wrapper">
                 <div class="section-title narrow">
                     <span class="material-symbols-outlined share">
-                        <h2><a title="" target="_blank" href="#about">About</a></h2>
-                    </span>
+                        <h2>
+                            <a title="" target="_blank" href="#about">About</a>
+                        </h2></span>
                 </div>
                 <div class="section-content wide">
                     <p>
@@ -85,8 +86,7 @@
                     <span class="material-symbols-outlined share">
                         <h2>
                             <a title="" target="_blank" href="#works">Works</a>
-                        </h2>
-                    </span>
+                        </h2></span>
                 </div>
                 <div class="grid-section wide">
 
@@ -101,7 +101,6 @@
                                     <li>HTML</li>
                                     <li>Tailwind</li>
                                     <li>React</li>
-                                    <li>Firebase</li>
                                 </ul>
                             </div>
                         </div>
@@ -201,13 +200,14 @@
         <div id="footer-wrapper">
             <div class="section-title narrow">
                 <span class="material-symbols-outlined share">
-                    <h2><a title="" target="_blank" href="#contacts">Contacts</a></h2>
-                </span>
+                    <h2>
+                        <a title="" target="_blank" href="#contacts">Contacts</a>
+                    </h2></span>
             </div>
             <div class="section-content wide">
-                <h3>Made with <span class="material-symbols-outlined">
-                        sports_bar
-                    </span> by Nicola Brucoli</h3>
+                <h3>Made with <span class="material-symbols-outlined">sports_bar</span> 
+                    by Nicola Brucoli
+                </h3>
                 <ul>
                     <li>
                         <a href="tel:+447759295309">Call me</a>
